fab9: mobile screenshot and more styles

--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
     </div><!-- /#home -->
 
     <!-- =========================
-         INTRO
+         FEATURES (was INTRO)
     ============================== -->
-    <div class="cd-scrolling-bg cd-color-1 o-red" id="intro-activ8">
+    <div class="cd-scrolling-bg cd-color-1 features o-red" id="intro-activ8">
       <div class="cd-container">
         <section id="intro-activ8" class="product-description">
          <!-- SECTION TITLE -->
@@ -188,7 +188,7 @@
             Activ8 is a great way to stay active and to really stay on course to reaching your personal
             fitness goals.
           </p>
-          <p><a class="btn btn-primary btn-lg" href="#about-activ8" role="button">Take a look inside Activ8.</a></p>
+          <p><a class="btn btn-default btn-lg standard-button" href="#about-activ8" role="button">Take a look inside Activ8.</a></p>
         </div>
       </section>
     </div>
@@ -208,7 +208,7 @@
           <div class="row">
 
 
-            <a class="btn btn-primary btn-lg standard-button" href="#moreonActiv8" role="button">Can I get rid of this btn?</a>
+            <a class="btn btn-default btn-lg standard-button" href="#moreonActiv8" role="button">Can I get rid of this btn?</a>
 
             <!-- FEATURES LEFT -->
             <section class="main-description col-md-4 col-sm-4 features-left">
@@ -245,7 +245,7 @@
             <p class="main-description col-xs-12 col-md-6">
               Our easy to use interface won't bog down your day. A few quick entries and your workout is logged and compared against prior workouts to track your progress.
             </p>
-            <p><a class="btn btn-primary btn-lg" href="#contact-activ8" role="button">Get Activ8 and get Moving!</a></p>
+            <a class="btn btn-default btn-lg standard-button" href="#contact-activ8" role="button">Get Activ8 and get Moving!</a>
           </div>
         </div>
       </div>
@@ -259,7 +259,7 @@
     ============================== -->
     <div class="cd-scrolling-bg cd-color-1 o-red" id="contact-activ8" class="product-description">
       <div class="cd-container">
-        <p><a class="btn btn-primary btn-lg download" href="" role="button">Download Activ8</a></p>
+        <a class="btn btn-default btn-lg standard-button download" href="" role="button">Download Activ8</a>
         <p class="main-description col-xs-12 col-md-12">
           Created by:</br>
           <a href="https://github.com/LoganArnett">Logan Arnett</a></br>
