fab9: icon files

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
   <!-- BOOTSTRAP -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 
+<!-- FONT ICONS -->
+<link rel="stylesheet" href="assets/elegant-icons/style.css">
+<link rel="stylesheet" href="assets/app-icons/styles.css">
+<!--[if lte IE 7]><script src="lte-ie7.js"></script><![endif]-->
+
   <!-- CUSTOM STYLESHEETS -->
   <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -59,36 +64,38 @@
     ============================== -->
     <div class="cd-fixed-bg cd-bg-1 o-red" id="home">
 
-    <!-- LOGO -->
-    <div class="logo">
-      <div class="navbar">
-        <div class="navbar-header">
-          <img src="images/logo.png" alt="">
-        </div>
-      </div>
-    </div><!-- /.logo -->
+    <div class="color-overlay">
+      <!-- LOGO -->
+        <div class="logo">
+          <div class="navbar">
+            <div class="navbar-header">
+              <img src="images/logo.png" alt="">
+            </div>
+          </div>
+        </div><!-- /.logo -->
 
 
-      <div class="row">
-        <div class="col-md-6 col-sm-6">
-          <div class="intro-section">
-          <h1 class="intro">Fitness Goals At Your Fingertips.</h1>
+          <div class="row">
+            <div class="col-md-6 col-sm-6">
+              <div class="intro-section">
+              <h1 class="intro">Fitness Goals At Your Fingertips.</h1>
 
-          <!-- BUTTON -->
-          <a class="btn btn-default btn-lg standard-button" href="#intro-activ8">Learn more</a>
-        </div><!-- /.intro-section" -->
-        </div><!-- /col-md-6 col-sm-6 -->
-      </div><!-- /.row -->
+              <!-- BUTTON -->
+              <a class="btn btn-default btn-lg standard-button" href="#intro-activ8">Learn more</a>
+            </div><!-- /.intro-section" -->
+            </div><!-- /col-md-6 col-sm-6 -->
+          </div><!-- /.row -->
+        </div><!-- /.color-overlay -->
     </div><!-- /#home -->
 
     <!-- =========================
          FEATURES (was INTRO)
     ============================== -->
-    <div class="cd-scrolling-bg cd-color-1 features o-red" id="intro-activ8">
+    <div class="cd-scrolling-bg cd-color-1 features o-blue" id="intro-activ8">
       <div class="cd-container">
-        <section id="intro-activ8" class="product-description">
+        <section id="intro-activ8" class="section-header product-description">
          <!-- SECTION TITLE -->
-         <h2>Features You Need</h2>
+         <h2 class="white-text">Features You Need</h2>
          <div class="colored-line">
          </div>
          <div class="section-description">
@@ -109,7 +116,7 @@
               <!-- ICON -->
               <div class="icon-container">
                 <div class="icon">
-                  <i class="icon_map_alt"></i>
+                  <i class="icon_gift_alt"></i>
                 </div>
               </div>
 
@@ -151,7 +158,7 @@
           <!-- ICON -->
           <div class="icon-container">
             <div class="icon">
-              <i class="icon_tablet"></i>
+              <i class="icon_gift"></i>
             </div>
           </div>
 
@@ -200,7 +207,7 @@
     <!-- =========================
          ABOUT (k's Features)
     ============================== -->
-    <div class="cd-scrolling-bg cd-color-2 features">
+    <div class="cd-scrolling-bg cd-color-2 o-purple features">
       <div class="cd-container">
         <div id="about-activ8" class="product-description">
 
@@ -234,7 +241,7 @@
     <!-- =========================
          MORE
     ============================== -->
-    <div class="cd-scrolling-bg cd-color-3 o-red" id="moreonActiv8">
+    <div class="cd-scrolling-bg cd-color-3 o-green" id="moreonActiv8">
       <div class="cd-container">
         <div id="moreonActiv8" class="product-description">
           <h2>Ease of use.</h2>
@@ -257,7 +264,7 @@
     <!-- =========================
          CONTACT
     ============================== -->
-    <div class="cd-scrolling-bg cd-color-1 o-red" id="contact-activ8" class="product-description">
+    <div class="cd-scrolling-bg cd-color-1 o-yellow" id="contact-activ8" class="product-description">
       <div class="cd-container">
         <a class="btn btn-default btn-lg standard-button download" href="" role="button">Download Activ8</a>
         <p class="main-description col-xs-12 col-md-12">
