--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,7 @@
     <script src="../bower_components/angular-route/angular-route.js"></script>
     <script src="../bower_components/firebase/firebase.js"></script>
     <script src="../bower_components/angularfire/dist/angularfire.js"></script>
+    <script src="../bower_components/lodash/dist/lodash.compat.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -44,6 +45,7 @@
     <script src="app/index.js"></script>
     <script src="app/controllers/main.controller.js"></script>
     <script src="app/controllers/new-workout.controller.js"></script>
+    <script src="app/controllers/pr.controller.js"></script>
     <script src="app/controllers/history.controller.js"></script>
     <script src="components/navbar/navbar.controller.js"></script>
 
