--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,22 @@
     <!-- endbuild -->
   </head>
   <body>
-
+    <div class="container-fluid main-body" ng-controller="MainController as app">
+      <nav class="navbar navbar-default main-nav" role="navigation">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="#">
+              <img class="ree" src="./assets/images/reebokxfit.png" alt="">
+            </a>
+            <a class="name" href="#">
+              <h1 class="appName navbar-left">Activ8</h1>
+            </a>
+            <button ng-click="app.logout()" class="logout navbar-right btn">Logout</button>
+          </div>
+        </div>
+      </nav>
     <div ng-view></div>
+    <div>
 
 
     <!-- build:js scripts/vendor.js -->
