--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
   <script src="../bower_components/modernizr/modernizr.js"></script>
   <!-- endbuild -->
 </head>
-<body>
+<body ng-controller="MainController as app">
   <!-- Main Body Container -->
   <div class="container-fluid main-body">
     <!-- Main Navigation -->
