--- a/src/index.html
+++ b/src/index.html
@@ -23,27 +23,27 @@
   <script src="../bower_components/modernizr/modernizr.js"></script>
   <!-- endbuild -->
 </head>
-<body>
+<body ng-controller="MainController as app">
+  <!-- Main Navigation -->
+  <nav class="navbar navbar-default main-nav" role="navigation">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">
+          <img class="ree" src="./assets/images/reebokxfit.png" alt="">
+        </a>
+        <a class="name" href="#">
+          <h1 class="appName navbar-left">Activ8</h1>
+        </a>
+        <button ng-click="app.logout()" class="logout navbar-right btn">Logout</button>
+      </div>
+    </div>
+  </nav><!-- End Main Navigation -->
   <!-- Main Body Container -->
   <div class="container-fluid main-body">
-    <!-- Main Navigation -->
-    <nav class="navbar navbar-default main-nav" role="navigation">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">
-            <img class="ree" src="./assets/images/reebokxfit.png" alt="">
-          </a>
-          <a class="name" href="#">
-            <h1 class="appName navbar-left">Activ8</h1>
-          </a>
-          <button ng-click="app.logout()" class="logout navbar-right btn">Logout</button>
-        </div>
-      </div>
-    </nav><!-- End Main Navigation -->
-    <div ng-view></div>
-    <div>
 
-    <div><!-- End Main Body Container -->
+    <div ng-view></div>
+
+  </div><!-- End Main Body Container -->
 
 
       <!-- build:js scripts/vendor.js -->
@@ -64,6 +64,7 @@
       <script src="components/navbar/navbar.controller.js"></script>
       <script src="app/controllers/new-workout.controller.js"></script>
       <script src="app/controllers/history.controller.js"></script>
+      <script src="app/controllers/pr-controller.js"></script>
 
 
       <!-- inject:partials -->
