routes corrected and kettlebell added

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
   <nav class="navbar navbar-default main-nav" role="navigation">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="#/">
           <img class="ree" src="./assets/images/reebokxfit.png" alt="">
         </a>
         <a class="name" href="#">
@@ -41,7 +41,7 @@
   <!-- Main Body Container -->
   <div class="container-fluid main-body">
 
-    <div ng-view></div>
+    <div class="page {{app.pageClass}}" ng-view></div>
 
   </div><!-- End Main Body Container -->
 
