--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
   <!-- Main Body Container -->
   <div class="container-fluid main-body">
 
-    <div class="page {{app.pageClass}}" ng-view></div>
+    <div class="{{work.pageClass}} {{history.pageClass}}" ng-view></div>
 
   </div><!-- End Main Body Container -->
 
@@ -57,6 +57,7 @@
       <!-- endbuild -->
 
       <script src="https://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
+      <script src="../bower_components/angular-animate/angular-animate.js"></script>
 
       <!-- build:js({.tmp,src}) scripts/app.js -->
       <script src="app/index.js"></script>
