beginning to polish main dash

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
   <!-- Main Body Container -->
   <div class="container-fluid main-body">
 
-    <div class="{{work.pageClass}} {{history.pageClass}}" ng-view></div>
+    <div ng-view></div>
 
   </div><!-- End Main Body Container -->
 
