--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
 <body ng-controller="MainController as app">
   <!-- Main Navigation -->
   <nav class="navbar navbar-default main-nav" role="navigation">
-    <div class="container-fluid">
+    <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand" href="#/">
           <img class="ree" src="./assets/images/reebokxfit.png" alt="">
