up to tablet for new workout

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
         <a class="navbar-brand" href="#/">
           <img class="ree" src="./assets/images/reebokxfit.png" alt="">
         </a>
-        <a class="name" href="#">
+        <a class="name" href="#/">
           <h1 class="appName navbar-left">Activ8</h1>
         </a>
         <button ng-click="app.logout()" class="logout navbar-right btn">Logout</button>
