--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
     <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand" href="#/">
-          <img class="ree" src="./assets/images/reebokxfit.png" alt="">
+          <img class="ree" src="/assets/images/reebokxfit.png" alt="">
         </a>
         <a class="name" href="#/">
           <h1 class="appName navbar-left">Activ8</h1>
