--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>Activ8</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
   <!-- build:css({.tmp,src}) styles/vendor.css -->
