--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   <link href='http://fonts.googleapis.com/css?family=Stardos+Stencil' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="app/index.css">
   <!-- endbuild -->
-
+  <link rel="stylesheet" href="app/pr.css">
   <!-- build:js scripts/modernizr.js -->
   <script src="../bower_components/modernizr/modernizr.js"></script>
   <!-- endbuild -->
@@ -53,6 +53,7 @@
       <script src="../bower_components/angular-route/angular-route.js"></script>
       <script src="../bower_components/firebase/firebase.js"></script>
       <script src="../bower_components/angularfire/dist/angularfire.js"></script>
+      <script src="../bower_components/lodash/dist/lodash.compat.js"></script>
       <!-- endbower -->
       <!-- endbuild -->
 
