--- a/src/index.html
+++ b/src/index.html
@@ -29,13 +29,15 @@
   <nav class="navbar navbar-default main-nav" role="navigation">
     <div class="container">
       <div class="navbar-header">
+        <div ng-show="app.chevron()" class="chevron">
         <a class="navbar-brand" href="#/">
-          <img class="ree" src="./assets/images/power4.png" alt="">
+          <span class="glyphicon glyphicon-chevron-left"></span>
         </a>
+      </div>
         <a class="name" href="#/">
           <h1 class="appName navbar-left">Activ8</h1>
         </a>
-        <button ng-click="app.logout()" class="logout navbar-right btn">Logout</button>
+        <button ng-show="app.loggedIn()" ng-click="app.logout()" class="logout navbar-right btn">Logout</button>
       </div>
     </div>
   </nav><!-- End Main Navigation -->
