--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
   <link href='http://fonts.googleapis.com/css?family=Stardos+Stencil' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="app/index.css">
   <!-- endbuild -->
-
+  <link rel="stylesheet" href="app/pr.css">
   <!-- build:js scripts/modernizr.js -->
   <script src="../bower_components/modernizr/modernizr.js"></script>
   <!-- endbuild -->
@@ -67,6 +67,7 @@
       <script src="components/navbar/navbar.controller.js"></script>
       <script src="app/controllers/new-workout.controller.js"></script>
       <script src="app/controllers/history.controller.js"></script>
+      <script src="app/controllers/pr-controller.js"></script>
 
 
       <!-- inject:partials -->
