--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,11 @@
   <!-- endbuild -->
 
   <!-- build:css({.tmp,src}) styles/app.css -->
-  <link href='http://fonts.googleapis.com/css?family=Stardos+Stencil' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Stardos+Stencil' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="app/index.css">
-  <!-- endbuild -->
   <link rel="stylesheet" href="app/pr.css">
+  <!-- endbuild -->
+
   <!-- build:js scripts/modernizr.js -->
   <script src="../bower_components/modernizr/modernizr.js"></script>
   <!-- endbuild -->
