--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
   <!-- build:css({.tmp,src}) styles/app.css -->
   <link href='https://fonts.googleapis.com/css?family=Stardos+Stencil' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="app/index.css">
+  <link rel="stylesheet" href="app/pr.css">
   <!-- endbuild -->
 
   <!-- build:js scripts/modernizr.js -->
